# Kronosobuchalka

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: install.ps1  install.sh
src/kronosobuchalka/: binance_archive.py  cli.py  kronos_labeler.py
