[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kronosobuchalka"
version = "0.1.0"
description = "Download hourly crypto candles and label them with Kronos forecasts."
requires-python = ">=3.11"
dependencies = [
  "einops>=0.8",
  "huggingface_hub>=0.33",
  "numpy>=2.0",
  "pandas>=2.2",
  "requests>=2.31",
  "safetensors>=0.6",
  "torch>=2.0",
  "tqdm>=4.67",
]

[project.scripts]
kronosobuchalka = "kronosobuchalka.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

